# Atom

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat
Application/: CMakeLists.txt
Application/src/: Entry.cpp
Atom/: CMakeLists.txt
Atom/src/: Application.cpp  Application.h  D3D12Context.cpp  GraphicsContext.h  Win32Window.cpp  Win32Window.h  Window.cpp  Window.h
Atom/src/Platform/Linux/: GLFWWindow.cpp  GLFWWindow.h
Atom/src/Platform/Windows/: D3D12Context.cpp  D3D12Context.h  Win32Window.cpp  Win32Window.h
Libraries/: CMakeLists.txt
